# ArtEngine

./: CMakeLists.txt  LICENSE  README.md
FileSystem/Levels/: scene1.xml
FileSystem/Levels/GameObjects/: cam1.xml  obj.xml  obj2.xml
FileSystem/Levels/Materials/: mat1.xml  mat2.xml
FileSystem/Meshes/: mesh1.json  mesh2.json
FileSystem/Scripts/: Main.wren
FileSystem/Scripts/BaseLibrary/: GameEngine.wren
FileSystem/Shaders/: fragment.glsl  vertex.glsl
Tools/: code.html
Tools/ArtEditor/: editor.html  editor.js
WrenVM/optional/: wren_opt_meta.c  wren_opt_random.c  wren_opt_random.h
WrenVM/vm/: wren_utils.h  wren_value.c  wren_vm.c
backup/: main.txt  renderer.txt
include/: main.h
include/engine/Core/: Application.h  ArtCore.h  ArtCoreUtils.h  Layer.h  LayerStack.h  Timestep.h
include/engine/Core/Glad/: glad.h
include/engine/Core/ImGui/: ImGuiLayer.h
include/engine/DataStructures/: matrix4.h  vector3.h
include/engine/Entities/: camera.h  gameObject.h  material.h  object.h  scene.h
include/engine/Entities/Actors/: dynamicActor.h  staticActor.h
include/engine/Entities/Colliders/: collisionBox.h
include/engine/Factories/: cameraFactory.h  collisionBoxFactory.h  dynamicActorFactory.h  gameObjectFactory.h  materialFactory.h  sceneFactory.h  staticActorFactory.h
include/engine/Graphics/: ArtGraphics.h  Material.h  Shader.h  Texture.h  gameObject.h  objectManager.h  renderer.h  scene.h
include/engine/Graphics/Cameras/: OrthographicCamera.h  OrthographicCameraController.h
include/engine/Graphics/Light/: DirectLight.h  LightSource.h  PointLight.h  SpotLight.h
include/engine/Graphics/Meshes/: Mesh.h
include/engine/Graphics/Pools/: MaterialPool.h  ShaderPool.h
include/engine/Inputs/: inputManager.h
include/engine/Inputs/KeyCodes/: keyboard.h  mouse.h
include/engine/Layers/: RenderLayer.h  ScriptsLayer.h
include/engine/Managers/: collisionsManager.h  scriptsManager.h
include/engine/Physics/: rigidBody.h
include/engine/Tools/: fileLoader.h  logger.h  shaderLoader.h  xmlReader.h
include/engine/Tools/GraphicsLoaders/: MaterialLoader.h  MeshLoader.h  ShaderLoader.h
src/: main.cpp
src/engine/: renderer.cpp  renderer.h
src/engine/Core/: Application.cpp  ArtCore.cpp  LayerStack.cpp
src/engine/Core/Glad/: glad.c
src/engine/Core/ImGui/: ImGuiLayer.cpp
src/engine/DataStructures/: matrix4.cpp
src/engine/Entities/: camera.cpp  gameObject.cpp  material.cpp  scene.cpp
src/engine/Entities/Actors/: dynamicActor.cpp  staticActor.cpp
src/engine/Entities/Colliders/: collisionBox.cpp
src/engine/Factories/: cameraFactory.cpp  collisionBoxFactory.cpp  dynamicActorFactory.cpp  gameObjectFactory.cpp  materialFactory.cpp  sceneFactory.cpp  staticActorFactory.cpp
src/engine/Graphics/: ArtGraphics.cpp  Material.cpp  Shader.cpp  Texture.cpp  gameObject.cpp  objectManager.cpp  renderer.cpp  scene.cpp
src/engine/Graphics/Cameras/: OrthographicCamera.cpp  OrthographicCameraController.cpp
src/engine/Graphics/Light/: DirectLight.cpp  PointLight.cpp  SpotLight.cpp
src/engine/Graphics/Meshes/: Mesh.cpp
src/engine/Graphics/Pools/: MaterialPool.cpp  ShaderPool.cpp
src/engine/Inputs/: inputManager.cpp
src/engine/Layers/: RenderLayer.cpp  ScriptsLayer.cpp
src/engine/Managers/: collisionsManager.cpp  scriptsManager.cpp
src/engine/Physics/: rigidBody.cpp
src/engine/Tools/: fileLoader.cpp  logger.cpp  shaderLoader.cpp  tinyxml2.cpp  xmlReader.cpp
src/engine/Tools/GraphicsLoaders/: MaterialLoader.cpp  MeshLoader.cpp  ShaderLoader.cpp
src/shaders/fragment/: fragment_shader.glsl
src/shaders/vertex/: vertex_shader.glsl
templates/: template.html
